Add a skyboxes tutorial and fully document sky tag

--- a/src/content/general/tools/krita/page.yml
+++ b/src/content/general/tools/krita/page.yml
@@ -1,6 +1,8 @@
 title:
   en: Krita
-stub: true
+img: krita.jpg
+imgCaption:
+  en: A BSP ground texture being painted in Krita.
 keywords:
   en:
     - 2d
