--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ src/**/*.yml linguist-detectable
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+*.blend filter=lfs diff=lfs merge=lfs -text
