--- a/src/data/structs/h1/tags/sky.yml
+++ b/src/data/structs/h1/tags/sky.yml
@@ -22,12 +22,18 @@ type_defs:
     fields:
       - name: animation_index
         type: int16
+        comments:
+          en: >
+            An index into the [model_animations][h1/tags/model_animations]
+            animations block.
       - type: pad
         size: 2
       - name: period
         type: float
         meta:
           unit: seconds
+        comments:
+          en: How long it takes the animation to complete 1 repeat.
       - type: pad
         size: 28
   SkyLightFlags:
@@ -35,12 +41,18 @@ type_defs:
     size: 4
     bits:
       - name: affects_exteriors
+        comments:
+          en: >
+            If enabled, this light will affect
+            [outdoor clusters][h1/tags/scenario_structure_bsp#indoor-vs-outdoor-clusters].
       - name: affects_interiors
         comments:
           en: >
-            If enabled, this light will affect clusters with a [sky
-            index][scenario_structure_bsp#tag-field-clusters-sky] of `-1`, which
-            are considered indoor/interior.
+            If enabled, this light will affect
+            [indoor clusters][h1/tags/scenario_structure_bsp#indoor-vs-outdoor-clusters].
+            Remember to set this light's _test distance_ low enough or else this
+            flag will seem to have no effect. You will not need to set this flag
+            except in special circumstances.
   SkyLight:
     class: struct
     assert_size: 116
@@ -50,14 +62,34 @@ type_defs:
         meta:
           tag_classes:
             - lens_flare
+        comments:
+          en: >
+            If provided, this light will appear in the sky with a
+            [Ray of Buddha][h1/tags/sky#ray-of-buddha] and a [lens_flare][].
+            Otherwise the light source itself will be invisible (but still casts
+            light for lightmaps).
       - name: lens_flare_marker_name
         type: TagString
+        comments:
+          en: >
+            If provided, the lens flare will be rendered in the sky at the location
+            of this [marker][h1/tags/gbxmodel#markers] in the model. If a marker
+            name is provided but no such marker exists in the model then no
+            lens flare will be rendered at all. Otherwise, when a marker name is
+            not provided the game will render the lens flare according to the
+            light's _direction_.
       - type: pad
         size: 28
       - name: flags
         type: SkyLightFlags
+        comments:
+          en: Flags that control which cluster types this light affects.
       - name: color
         type: ColorRGB
+        comments:
+          en: >
+            The colour of the directional light. Overhead sunlight will be a
+            yellowish white, while sunsets will be more orange.
       - name: power
         type: float
         meta:
@@ -68,12 +100,33 @@ type_defs:
             (causes a crash in pre-H1A versions).
       - name: test_distance
         type: float
+        comments:
+          en: >
+            The maximum distance to search for a shadow-casting surface from a
+            surface being lit towards the sky light. The radiosity process
+            shoots rays toward sky lights to determine if they are directly lit,
+            but they can be limited with this field. If you are finding that
+            distant parts of the BSP are not casting shadows where you expect,
+            try increasing this. Increasing the distance likely has a time cost
+            for radiosity since more surfaces need to be considered.
       - type: pad
         size: 4
       - name: direction
         type: Euler2D
+        comments:
+          en: >
+            The direction _toward_ the sky light from the origin. The _yaw_ is
+            in a counterclockwise direction from the +X axis while the _pitch_
+            ranges from `-90` (straight below) to `90` (straight above), with `0`
+            being at the horizon.
       - name: diameter
-        type: float
+        type: Angle
+        comments:
+          en: >
+            Angular diameter of the light source. It is entered in degrees in
+            Guerilla but internally stored in radians. A wider angular diameter
+            makes shadows softer. Increase this diameter if your light source is
+            diffuse like as an overcast sky.
   Sky:
     class: struct
     meta:
@@ -90,31 +143,65 @@ type_defs:
           tag_classes:
             - gbxmodel
             - model
+        comments:
+          en: >
+            An optional reference to a model which is rendered for this sky.
+            Fully indoor maps where the sky isn't visible don't need to have a
+            model since there would be no way to see it (and it doesn't render
+            from indoor clusters anyway).
       - name: animation_graph
         type: TagDependency
         meta:
           tag_classes:
             - model_animations
+        comments:
+          en: >
+            An animation which can move parts of the sky model, including
+            markers. This must be an overlay (JMO) animation to work.
       - type: pad
         size: 24
       - name: indoor_ambient_radiosity_color
         type: ColorRGB
+        comments:
+          en: >
+            Sets the colour used for ambient light in
+            [indoor clusters][h1/tags/scenario_structure_bsp#indoor-vs-outdoor-clusters].
+            This can be used to brighten indoor spaces to a minimum level.
       - name: indoor_ambient_radiosity_power
         type: float
         meta:
           min: 0
         comments:
-          en: This value must not be negative (causes a crash in pre-H1A versions).
+          en: >
+            Sets the strength of indoor ambient light. This value must not be
+            negative (causes a crash in pre-H1A versions).
       - name: outdoor_ambient_radiosity_color
         type: ColorRGB
+        comments:
+          en: >
+            Sets the colour used for ambient light in
+            [outdoor clusters][h1/tags/scenario_structure_bsp#indoor-vs-outdoor-clusters].
+            It is like a fill light that approximates light coming from all
+            directions and will be most visible in shadowed areas that would not
+            be lit otherwise. This is typically a similar colour to the sky's
+            backdrop, e.g. blue for a blue sky and black in space.
       - name: outdoor_ambient_radiosity_power
         type: float
         meta:
           min: 0
         comments:
-          en: This value must not be negative (causes a crash in pre-H1A versions).
+          en: >
+            Sets the strength of outdoor ambient light. Values around `0.2` are
+            common. If this value is too high the level will appear flat
+            and shapeless from a lack of strong shadows. This value must not be
+            negative (causes a crash in pre-H1A versions).
       - name: outdoor_fog_color
         type: ColorRGB
+        comments:
+          en: >
+            The colour of the atmospheric fog which draws over the
+            [BSP][h1/tags/scenario_structure_bsp] by distance while in outdoor
+            clusters.
       - type: pad
         size: 8
       - name: outdoor_fog_maximum_density
@@ -123,16 +210,40 @@ type_defs:
           min: 0
           max: 1
           default: 1
+        comments:
+          en: >
+            Limits the maximum density of outdoor fog. For example, a value of
+            `0.75` would mean that no matter how far away parts of the level and
+            objects are, the fog will only ever reach 75% opacity and you will
+            still be able to see their textures and details faintly. If this
+            value is `1` then distant areas beyond _outdoor_fog_opaque_distance_
+            will always be _outdoor_fog_color_.
       - name: outdoor_fog_start_distance
         type: float
         meta:
           unit: world units
+        comments:
+          en: >
+            Within this distance there will be no outdoor fog drawn. This is the
+            start distance where fog begins to fade to its maximum density. A
+            small value like `0` or `1` is typical.
       - name: outdoor_fog_opaque_distance
         type: float
         meta:
           unit: world units
+        comments:
+          en: >
+            The distance where fog reaches its maximum density. Note that the
+            _outdoor_fog_maximum_density_ may limit how opaque it actually is at
+            this distance. For comparison, Blood Gulch's sky uses `100` while
+            The Maw's uses `20`.
       - name: indoor_fog_color
         type: ColorRGB
+        comments:
+          en: >
+            The colour of the atmospheric fog which draws over the
+            [BSP][h1/tags/scenario_structure_bsp] by distance while in indoor
+            clusters.
       - type: pad
         size: 8
       - name: indoor_fog_maximum_density
@@ -141,19 +252,43 @@ type_defs:
           min: 0
           max: 1
           default: 1
+        comments:
+          en: >
+            Limits the maximum density of indoor fog. If this value is `1.0` then
+            distant clusters beyond _indoor_fog_opaque_distance_ will be culled
+            from the [PVS][h1/tags/scenario_structure_bsp#potentially-visible-set].
       - name: indoor_fog_start_distance
         type: float
         meta:
           unit: world units
+        comments:
+          en: >
+            Within this distance there will be no indoor fog drawn. This is the
+            start distance where fog begins to fade to its maximum density. A
+            small value like `0` or `1` is typical.
       - name: indoor_fog_opaque_distance
         type: float
         meta:
           unit: world units
+        comments:
+          en: >
+            The distance where fog reaches its maximum opacity for
+            [indoor clusters][h1/tags/scenario_structure_bsp#indoor-vs-outdoor-clusters].
+            When _indoor fog maximum density_ is `1.0`, this distance helps
+            cull visible clusters when Tool is generating the
+            [PVS][h1/tags/scenario_structure_bsp#potentially-visible-set].
       - name: indoor_fog_screen
         type: TagDependency
         meta:
           tag_classes:
             - fog
+          unused: true
+        comments:
+          en: >
+            This field is seemingly unused but was probably intended to allow
+            indoor clusters to have a fog screen effect like planar [fog][h1/tags/fog].
+            Setting a reference here does not cause anything to render even in H1A
+            where fog screen effects were fixed for planar fog.
       - type: pad
         size: 4
       - name: shader_functions
@@ -162,15 +297,34 @@ type_defs:
           T: SkyFunction
         meta:
           hek_max_count: 8
+          unused: true
+        comments:
+          en: >
+            Not used by the engine. Ignore this field.
       - name: animations
         type: Block
         type_args:
           T: SkyAnimation
         meta:
           hek_max_count: 8
+        comments:
+          en: Defines the repeating period (duration) of sky model animations.
       - name: lights
         type: Block
         type_args:
           T: SkyLight
         meta:
           hek_max_count: 8
+        comments:
+          en: >
+            A list of directional light sources that cast light on the level.
+            These are mainly used to represent incoming sunlight, but you can
+            include multiple lights to model different light sources. For
+            example, if you were making a night sky with two moons you could
+            have two lights, or if your sky is cloudy you may wish to have a
+            direct overhead light with a high _diameter_ and low _power_ to
+            model soft lighting bounced down from the clouds.
+
+            A sky doesn't _have to_ have any lights. Indoor skies like the one
+            for _The Library_ have no need unless you have a special reason to
+            force directional lights indoors with the _affects interiors_ flag.
