--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,5 +24,5 @@ phases:
   post_build:
     commands:
       - bash -c "if [ /"$CODEBUILD_BUILD_SUCCEEDING/" == /"0/" ]; then exit 1; fi"
-      - aws s3 sync --delete ./dist s3://c10-next
+      - aws s3 sync --delete ./dist s3://reclaimers-wiki-files
       - aws s3api put-bucket-website --bucket c10-next --website-configuration file://src/data/aws/s3/bucket-website.json
