Clarify the sounds situation + doc debug menu + misc fixes.
- Fix some issues I noticed after launch.
- clarify the standalone build situation

--- a/src/content/h3/tools/h3-ek/page.yml
+++ b/src/content/h3/tools/h3-ek/page.yml
@@ -6,6 +6,6 @@ imgCaption:
     Sapien, Tool, and Guerilla are still the main programs used for modding Halo 3.
 info:
   en: >
-    * Release date: 2021
+    * Release date: October 2021
 stub: true
 toolName: H3-EK
