--- a/src/content/h3/tools/h3-ek/h3-standalone-build/page.yml
+++ b/src/content/h3/tools/h3-ek/h3-standalone-build/page.yml
@@ -6,6 +6,11 @@ keywords:
     - cache
     - h3
 toolName: H3-Standalone
+related:
+  - /h1/tools/h1a-ek/h1a-standalone-build
 img: halo_3_tag_test.jpg
 imgCaption:
   en: Watching a cutscene in tag test.
+thanks:
+  AKlinth:
+    en: Pointing out that the debug menu is undocumented.
