Split up the materials page

--- a/src/content/general/source-data/materials/page.yml
+++ b/src/content/general/source-data/materials/page.yml
@@ -1,5 +1,5 @@
 title:
-  en: Material naming conventions
+  en: Material Overview Hub
 img: materials.jpg
 imgCaption:
   en: An example of some material names used for a level [BSP][h1/tags/scenario_structure_bsp] in [Blender][].
