Fixes and hotfix info

--- a/src/content/general/source-data/materials/h3-materials/page.yml
+++ b/src/content/general/source-data/materials/h3-materials/page.yml
@@ -1,5 +1,5 @@
 title:
-  en: Halo 3 Material Overview
+  en: Halo 3 materials
 img: materials.jpg
 imgCaption:
-  en: An example of some material names used for a level [BSP][h1/tags/scenario_structure_bsp] in [Blender][].
+  en: An example of some material names used for a level [BSP][h3/tags/scenario_structure_bsp] in [Blender][].
