--- a/src/content/general/source-data/materials/h1-materials/page.yml
+++ b/src/content/general/source-data/materials/h1-materials/page.yml
@@ -1,5 +1,5 @@
 title:
-  en: Halo 1 Material Overview
+  en: Halo 1 materials
 img: materials.jpg
 imgCaption:
   en: An example of some material names used for a level [BSP][h1/tags/scenario_structure_bsp] in [Blender][].
