Add info about H3 BSP zone sets and clusters, minor H3 sapien page updates

--- a/src/content/h3/tags/camera_fx_settings/page.yml
+++ b/src/content/h3/tags/camera_fx_settings/page.yml
@@ -1,5 +1,6 @@
-  title:
-    en: camera_fx_settings
-  stub: true
-  tagName: h3/camera_fx_settings
-  
+title:
+  en: camera_fx_settings
+stub: true
+tagName: h3/camera_fx_settings
+related:
+  - /h3/tags/area_screen_effect
