h1/map ResourceMapType: fix enum values
There is no zero value so each value was offset by 1.

--- a/src/data/structs/h1/files/map.yml
+++ b/src/data/structs/h1/files/map.yml
@@ -236,12 +236,15 @@ type_defs:
     size: 4
     options:
       - name: bitmaps
+        value: 1
         comments:
           en: The file contains [bitmap][] tags.
       - name: sounds
+        value: 2
         comments:
           en: The file contains [sound][] tags.
       - name: loc
+        value: 3
         comments:
           en: The file contains [font][] and [unicode_string_list][] tags.
   ResourceMapResource:
