--- a/src/data/tags/h3.yml
+++ b/src/data/tags/h3.yml
@@ -20,7 +20,7 @@ breakable_surface:
 cache_file_resource_gestalt:
 cache_file_resource_layout_table:
 cache_file_sound:
-  #id: shit
+  #id: snd!
 camera_fx_settings:
   #id: cfxs
   description:
@@ -52,6 +52,7 @@ collision_model:
 color_table:
   #id: colo
 compute_shader:
+  #id: cmpu
 contrail_system:
   #id: cntl
   description:
@@ -67,6 +68,7 @@ damage_effect:
   #id: jpt_
 damage_response_definition:
 decal_system:
+  #id: decs
 decorator_set:
   #id: DECR
 detail_object_collection:
@@ -100,7 +102,9 @@ fragment:
 game_engine_settings_definition:
 giant:
 global_pixel_shader:
+  #id: glps
 global_vertex_shader:
+  #id: glvs
 globals:
   #id: matg
 gui_bitmap_widget_definition:
