Document H1 dialogue tag

--- a/src/content/h1/tags/dialogue/page.yml
+++ b/src/content/h1/tags/dialogue/page.yml
@@ -1,4 +1,9 @@
 title:
   en: dialogue
-stub: true
+img: woohoo.jpg
+imgCaption:
+  en: Woohoo!
 tagName: h1/dialogue
+thanks:
+  1SDAN:
+    en: Listing canonical character dialogue tags
