Begin Work on French Translation

--- a/src/content/h3/tools/h3-ek/page.yml
+++ b/src/content/h3/tools/h3-ek/page.yml
@@ -1,11 +1,16 @@
 title:
   en: Halo 3 Editing Kit
+  fr: Halo 3 Editing Kit
 img: h3ek.jpg
 imgCaption:
   en: >-
     Sapien, Tool, and Guerilla are still the main programs used for modding Halo 3.
+  fr: >-
+    Sapien, Tool, et Guerilla sont toujours les principaux programmes utilisés pour le modding Halo 3.
 info:
   en: >
     * Release date: October 2021
+  fr: >
+    * Date de sortie: Octobre 2021
 stub: true
 toolName: H3-EK
