--- a/src/content/utility/404/page.yml
+++ b/src/content/utility/404/page.yml
@@ -1,6 +1,7 @@
 title:
   en: 404 Page not found!
   es: 404 Página web no encontrado!
+  fr: 404 La Page est introuvable!
 noSearch: true
 noList: true
 Page404: true
