Whitespace cleanup and script info credits

--- a/src/content/general/engine/scripting/page.yml
+++ b/src/content/general/engine/scripting/page.yml
@@ -7,3 +7,6 @@ keywords:
     - functions
     - globals
     - bsl
+thanks:
+  Crisp:
+    en: Engine differences, script parameter info, object type mask info
