Add info on tag headers

--- a/src/content/h1/tags/page.yml
+++ b/src/content/h1/tags/page.yml
@@ -11,6 +11,8 @@ imgCaption:
 thanks:
   Kavawuvi:
     en: Information about invalid tags
+  Mimickal:
+    en: Information about tag headers
   Vaporeon:
     en: Information about modified stun values in Custom Edition
 # todo: these heading IDs should be used/updated when translating this page
