More ODST stuff and update H3 images

--- a/src/content/h3odst/tools/h3odst-ek/page.yml
+++ b/src/content/h3odst/tools/h3odst-ek/page.yml
@@ -1,11 +1,11 @@
 title:
-  en: Halo 3 Editing Kit
-img: h3ek.jpg
+  en: Halo 3 ODST Editing Kit
+img: h3odstek.jpg
 imgCaption:
   en: >-
-    Sapien, Tool, and Guerilla are still the main programs used for modding Halo 3.
+    Sapien, Tool, and Guerilla are still the main programs used for modding Halo 3 ODST.
 info:
   en: >
-    * Release date: October 2021
+    * Release date: October 2022
 stub: true
-toolName: H3-EK
+toolName: H3ODST-EK
