Fix related pages.
Should really make those support relative paths.

--- a/src/content/general/source-data/fbx/page.yml
+++ b/src/content/general/source-data/fbx/page.yml
@@ -10,4 +10,4 @@ stub: true
 related:
   - /h1/tools/h1a-ek/h1a-tool
   - /h2/tools/h2-ek/h2-tool
-  - /h3/tools/h3-ek/h3-tool
+  - /h3/h3-ek/h3-tool
