--- a/src/content/h1/tools/h1a-ek/h1a-tool/page.yml
+++ b/src/content/h1/tools/h1a-ek/h1a-tool/page.yml
@@ -14,7 +14,7 @@ imgCaption:
 related:
   - /h1/tools/hek/tool
   - /h2/tools/h2-ek/h2-tool
-  - /h3/tools/h3-ek/h3-tool
+  - /h3/h3-ek/h3-tool
 thanks:
   num0005:
     en: Documenting H1A commands and updating documentation for other commands.
