--- a/src/content/h2/tools/h2-ek/h2-tool/page.yml
+++ b/src/content/h2/tools/h2-ek/h2-tool/page.yml
@@ -7,7 +7,7 @@ stub: true
 related:
   - /h1/tools/h1a-ek/h1a-tool
   - /h2/tools/h2v-ek/h2v-tool
-  - /h3/tools/h3-ek/h3-tool
+  - /h3/h3-ek/h3-tool
 keywords:
   en:
     - tool
