--- a/src/content/h2/tools/h2-ek/h2-guerilla/page.yml
+++ b/src/content/h2/tools/h2-ek/h2-guerilla/page.yml
@@ -8,7 +8,7 @@ stub: true
 related:
   - /h1/tools/h1a-ek/h1a-guerilla
   - /h2/tools/h2v-ek/h2v-guerilla
-  - /h3/tools/h3-ek/h3-guerilla
+  - /h3/h3-ek/h3-guerilla
 keywords:
   en:
     - tag-editor
