--- a/src/content/h2/tools/h2-ek/h2-sapien/page.yml
+++ b/src/content/h2/tools/h2-ek/h2-sapien/page.yml
@@ -7,7 +7,7 @@ stub: true
 related:
   - /h1/tools/h1a-ek/h1a-sapien
   - /h2/tools/h2v-ek/h2v-sapien
-  - /h3/tools/h3-ek/h3-sapien
+  - /h3/h3-ek/h3-sapien
 keywords:
   en:
     - scenario
