Fix file extensions.

--- a/src/content/h1/tools/blender-gbxmodel-importer/page.yml
+++ b/src/content/h1/tools/blender-gbxmodel-importer/page.yml
@@ -1,6 +1,6 @@
 title:
   en: Blender .gbxmodel Importer
-img: bi2.jpg
+img: bi2.webp
 imgCaption:
   en: A pelican model imported to Blender 2.7
 info:
