Updated Osoyoos pages, HR guides and Tool page

--- a/src/content/general/tools/osoyoos/sidecar-importing/page.yml
+++ b/src/content/general/tools/osoyoos/sidecar-importing/page.yml
@@ -1,5 +1,5 @@
 title:
-  en: Osoyoos Launcher - Settings
+  en: Sidecar Importing
 img: import_sidecar_view.png
 imgCaption:
   en: The settings found in the Import Sidecar task
