--- a/src/content/hr/guides/sidecar-import-process/page.yml
+++ b/src/content/hr/guides/sidecar-import-process/page.yml
@@ -1,10 +1,8 @@
 title:
-  en: H3 shader compiling
+  en: Sidecar Import Process
 keywords:
   en:
-    - shaders
-    - templates
-    - HLSL
-thanks:
-  num0005:
-    en: Writing this page.
+    - Reach
+    - sidecar
+    - import
+    - importing
