Better HREK screenshot showcasing the new addition to the toolkit.

--- a/src/content/hr/hr-ek/page.yml
+++ b/src/content/hr/hr-ek/page.yml
@@ -1,9 +1,9 @@
 title:
   en: Halo Reach Editing Kit
-img: hrek.jpg
+img: hrek.png
 imgCaption:
   en: >-
-    Sapien and Tool are the main programs used for modding Halo Reach with Bonobo replacing Guerilla.
+    Foundation level editor and MegaloEdit game type editor.
 info:
   en: >
     * Release date: TBA
