JSON info & params, Reach animation data

--- a/src/content/hr/guides/asset-json-files/page.yml
+++ b/src/content/hr/guides/asset-json-files/page.yml
@@ -1,8 +1,11 @@
 title:
-  en: HR JSON Parameters
+  en: Reach JSON File Breakdown
 keywords:
   en:
     - Reach
     - import
     - importing
     - JSON
+thanks:
+  Crisp:
+    en: Writing this page
