Add HREK release date

--- a/src/content/hr/hr-ek/page.yml
+++ b/src/content/hr/hr-ek/page.yml
@@ -6,6 +6,6 @@ imgCaption:
     Foundation level editor and MegaloEdit game type editor.
 info:
   en: >
-    * Release date: TBA
+    * Release date: September 2022
 stub: true
 toolName: HR-EK
