--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "gulp",
     "dev": "gulp dev",
-    "start": "node -e 'require(\"./server.js\")()'"
+    "start": "node -e 'require(\"./server.js\")()'",
+    "server": "ts-node src/server.ts"
   },
   "files": [
     "dist",
@@ -30,6 +31,7 @@
     "serve-static": "^1.14.1"
   },
   "devDependencies": {
+    "@markdoc/markdoc": "^0.1.10",
     "common-tags": "^1.8.0",
     "del": "^5.1.0",
     "feather-icons": "^4.28.0",
@@ -41,8 +43,11 @@
     "html-entities": "^1.3.1",
     "js-yaml": "^3.13.1",
     "marked": "^2.0.0",
+    "preact": "^10.11.0",
+    "preact-render-to-string": "^5.2.4",
     "ramda": "^0.27.1",
     "sass": "^1.26.3",
+    "ts-node": "^10.9.1",
     "viz.js": "^2.1.2"
   }
 }
