--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "express": "^4.17.1",
     "htm": "^3.0.4",
     "htmlparser2": "^6.1.0",
-    "minisearch": "^2.3.1",
-    "serve-static": "^1.14.1"
+    "minisearch": "^2.3.1"
   },
   "devDependencies": {
     "@markdoc/markdoc": "^0.1.10",
@@ -37,8 +36,6 @@
     "feather-icons": "^4.28.0",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
-    "gulp-rename": "^2.0.0",
-    "gulp-transform": "^3.0.5",
     "highlight.js": "^10.4.1",
     "html-entities": "^1.3.1",
     "js-yaml": "^3.13.1",
