--- a/src/data/structs/h1/tags/shader_model.yml
+++ b/src/data/structs/h1/tags/shader_model.yml
@@ -22,7 +22,7 @@ type_defs:
             If enabled, detail maps should be applied _over_ specular
             reflections. This flag does not work as intended in the [Gearbox
             renderer](~renderer#gearbox-regressions) but can be worked around with
-            [Chimera](~). It is fixed in H1A.
+            [Chimera](~) or CEnshine. It is fixed in H1A.
       - name: two_sided
       - name: not_alpha_tested
       - name: alpha_blended_decal
