Add tag dependency info to metabox

--- a/src/data/workflows/h1/tags.yml
+++ b/src/data/workflows/h1/tags.yml
@@ -141,7 +141,8 @@ h1/sound_looping:
 h1/sound_scenery:
   page: h1/tags/sound_scenery
 h1/spheroid:
-  page: h1/tags/spheroid
+  page: h1/tags
+  heading: unused-tags
 h1/string_list:
   page: h1/tags/string_list
 h1/tag_collection:
