--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
   },
   "homepage": "https://c20.reclaimers.net",
   "devDependencies": {
-    "express": "^4.17.1",
-    "minisearch": "^2.3.1",
     "@markdoc/markdoc": "^0.1.10",
     "del": "^5.1.0",
+    "esbuild": "^0.15.12",
+    "express": "^4.17.1",
     "feather-icons": "^4.28.0",
     "glob": "^7.1.6",
     "gulp": "^4.0.2",
     "highlight.js": "^10.4.1",
     "js-yaml": "^3.13.1",
+    "minisearch": "^2.3.1",
     "preact": "^10.11.0",
     "preact-render-to-string": "^5.2.4",
     "ramda": "^0.27.1",
