--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ramda": "^0.27.1",
     "sass": "^1.26.3",
     "ts-node": "^10.9.1",
+    "typescript": "^4.8.4",
     "viz.js": "^2.1.2"
   }
 }
